# BitGL

./: CMakeLists.txt  README.md
include/: Color.hpp  Color.ipp  DrawWindow.hpp  Matrix.hpp  Point.hpp  Point.ipp  Triangle.hpp  Vec.hpp  Vec.ipp  Vector.hpp  Window.hpp  color_utils.hpp  color_utils.ipp  point_utils.hpp  point_utils.ipp
include/impl/: Color.ipp  Matrix.ipp  Point.ipp  Vec.ipp  Vector.ipp
src/: DrawWindow.cpp  Vec.cpp  Window.cpp  main.cpp
